/***********************************************************************
 X3 ChangeLog

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/Makefile.in: undo temp fix

	* src/opserv.c: perm fix to HAVE_TRACK define problems

	* src/configure.in: perm fix to HAVE_TRACK define problems

	* src/config.h.in: perm fix to HAVE_TRACK define problems

2006-12-21  Neil Spierling  <sirvulcan@gmail.com>

	* src/Makefile.in: Temp fix.

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/proto-p10.c: added full mark support including as a trace
	criteria.

	* src/opserv.c:  added full mark support including as a trace
	criteria.

	* src/hash.h:  added full mark support including as a trace
	criteria.

	* src/opserv.help: documented the 'marked' criteria in trace.

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: fixing a bug with unmatching userlevels and the del*
	commands. (such as delpeon of a user with non-standard peon level)

	* src/spamserv.c: fixing memory corruption problems with dicts. Fixed
	crash with service rename, and probably many other problems.

	* src/mod-track.c: fixing memory problems, and the broken set command.
	Track may be stable now, needs large scale testing.

2006-12-20  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.help: Opps that will teach me for cut n pasting.
	Adjusted duration line for CLVL help. Users are not removed after
	the duration they are reverted back to their previous access
	level.

2006-12-19  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: check the ircd side ban list too

	* src/opserv.c: Fixed a small bug, woops.

2006-12-19  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Added trace_check_bans, cut down version of
	check_bans for checkrestrictions

	* src/chanserv.h: Declare trace_check_bans.

	* src/opserv.c: Added addalert/trace option checkrestrictions. When
	using SVSJOIN as an action this option will check the ban lists, invite